--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
-{ "name": "pimatic-plugin-template",
-  "description": "The plugin description",
-  "author": "Your Name <you@example.com> (http://your-website)",
-  "main": "my-plugin",
+{ "name": "pimatic-lcd",
+  "description": "Display information on an i2c lcd display",
+  "author": "Oliver Schneider <oliverschneider89+sweetpi@gmail.com> (http://www.sweetpi.de)",
+  "main": "lcd",
   "files": [
-    "my-plugin.coffee",
+    "lcd.coffee",
     "README.md",
-    "my-plugin-config-schema.coffee"
+    "lcd-config-schema.coffee"
   ],
   "version": "0.8.0",
-  "homepage": "http://your-plugin-website",
+  "homepage": "http://pimatic.org",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/pimatic/pimatic-plugin-template.git"
+    "url": "git://github.com/pimatic/pimatic-lcd.git"
   },
-  "configSchema": "my-plugin-config-schema.coffee",
+  "configSchema": "lcd-config-schema.coffee",
   "dependencies": {
   },
   "peerDependencies": {
