--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "README.md",
     "lcd-config-schema.coffee"
   ],
-  "version": "0.8.3",
+  "version": "0.9.0",
   "homepage": "http://pimatic.org",
   "repository": {
     "type": "git",
@@ -16,10 +16,10 @@
   },
   "configSchema": "lcd-config-schema.coffee",
   "dependencies": {
-    "i2c-lcd": "^1.0.2"
+    "i2c-lcd": "git+https://github.com/sweetpi/i2c-lcd.git#i2c-update"
   },
   "peerDependencies": {
-    "pimatic": "0.8.*"
+    "pimatic": "0.9.*"
   },
   "engines": {
     "node": ">0.8.x",
